	* new "Add all variations" button to add to the current game all the multiPV variations of the engine (works only for uci engines)
	* now the "Add variation(s)" buttons work even at the end of a game (workaround, the variations are added one move before and the last game move is appended at the beginning of every variation)
	* when a variation is added from analysis window, also the engine name is added
	* the analysis window switches automatically to history mode when multipv = 1 (like in the 3.6.23 version)
	* added the max move number indicator to the current move number (works badly with some engines that don't send the "info currmovenumber" string back to gui regularly, we have to wait some time to see the right value)
	* new "Lock Engine" button (the engine keeps analysing the current position even if the user changes the position on the board)
	* reordered the buttons on the right side of the window
	* F4 and F5 starts/stops analysis of engines 1 and 2, respectively.
- The uci option window is now more large when it opens, in order to contain all the option of an engine.
- Completed translations of every pending label in italian language file.
- Fixed the help messages for some tools menus, probably wrong due to a new menu item added in 3.6.24 version (changed the code so that now it's not needed to change all menu indexes for help messages whenever a new menu is added).
- Finder : added a contextual menu (right mouse button to copy, move, delete and backup bases).
- updated swedish translation (thanks to Hans Eriksson)
- Added the scanning of filter files (.sso) from the command line (i.e. scid mydb myfilter, scid opens immediatly with mydb filtered by myfilter file)
- Tuned the startup communication between scid and engines
- Rybka 3 supported despite a small bug in its command line parser
- Scid-engine log files: maxsize to 5000 lines (was 500) and flush on every put (to aid problem detection when an engine crashes)