@@ -510,3 +510,4 @@ scid-3.6.25
 - Tuned the startup communication between scid and engines
 - Rybka 3 supported despite a small bug in its command line parser
 - Scid-engine log files: maxsize to 5000 lines (was 500) and flush on every put (to aid problem detection when an engine crashes)
+- Training - Serious game : UCI options of engines are now sent, so if an engine has for example an UCI_Elo present and set up, playing a serious game will be done in fact with a weakened engine (then similar to Tactical game that is designed solely for Phalanx usage).
